@@ -6,5 +6,6 @@ freebsd-quota (8.2-1) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Now using Standards-Version 3.9.2 (no changes needed).
   * Refactor source name into SOURCE in debian/rules.
+  * Line-wrap CFLAGS and PMAKE variables in debian/rules.
 
  -- Mats Erik Andersson <mats.andersson@gisladisker.se>  Mon, 28 Feb 2011 18:29:17 +0100
